[gd_scene load_steps=8 format=3 uid="uid://b5fvkpama31uo"]

[ext_resource type="Script" path="res://addons/godot_rulebook/editor/components/editor_rule.gd" id="1_tbsl0"]
[ext_resource type="Texture2D" uid="uid://fdiqucphdxpf" path="res://addons/godot_rulebook/editor/assets/icons/fold_down_arrow.svg" id="2_d8iix"]
[ext_resource type="Texture2D" uid="uid://d2bgfnbm5a34m" path="res://addons/godot_rulebook/editor/assets/icons/folded_right_arrow.svg" id="3_5ps6m"]
[ext_resource type="Texture2D" uid="uid://j1jqtw7mp57u" path="res://addons/godot_rulebook/editor/assets/icons/remove.svg" id="4_gohyw"]
[ext_resource type="Script" path="res://addons/godot_rulebook/editor/components/resolution_path.gd" id="5_c54nv"]
[ext_resource type="Texture2D" uid="uid://cuwnd5nylkfs3" path="res://addons/godot_rulebook/editor/assets/icons/file_browse.svg" id="6_q10ke"]
[ext_resource type="Script" path="res://addons/godot_rulebook/editor/components/browse_button.gd" id="7_5w8ul"]

[node name="EditorRule" type="PanelContainer"]
anchors_preset = 14
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_top = -15.5
offset_bottom = 15.5
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_tbsl0")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 2

[node name="Header" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2

[node name="FoldRuleButton" type="CheckBox" parent="VBoxContainer/Header"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_stretch_ratio = 15.0
theme_override_icons/checked = ExtResource("2_d8iix")
theme_override_icons/unchecked = ExtResource("3_5ps6m")
button_pressed = true
text = "RULE"
flat = true

[node name="DeleteRule" type="Button" parent="VBoxContainer/Header"]
layout_mode = 2
icon = ExtResource("4_gohyw")

[node name="ContentsMargin" type="MarginContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_bottom = 30

[node name="Contents" type="VBoxContainer" parent="VBoxContainer/ContentsMargin"]
layout_mode = 2

[node name="If" type="Label" parent="VBoxContainer/ContentsMargin/Contents"]
layout_mode = 2
text = "IF:"

[node name="MonitorablesMargin" type="MarginContainer" parent="VBoxContainer/ContentsMargin/Contents"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 40
theme_override_constants/margin_bottom = 20

[node name="Monitorables" type="VBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/MonitorablesMargin"]
unique_name_in_owner = true
layout_mode = 2

[node name="AddMonitorableSection" type="VBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/MonitorablesMargin/Monitorables"]
unique_name_in_owner = true
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/MonitorablesMargin/Monitorables/AddMonitorableSection"]
layout_mode = 2

[node name="AddMonitorable" type="Button" parent="VBoxContainer/ContentsMargin/Contents/MonitorablesMargin/Monitorables/AddMonitorableSection/HBoxContainer"]
layout_mode = 2
text = "+ Monitorable"

[node name="HSeparator" type="HSeparator" parent="VBoxContainer/ContentsMargin/Contents/MonitorablesMargin/Monitorables/AddMonitorableSection/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3

[node name="Then" type="Label" parent="VBoxContainer/ContentsMargin/Contents"]
auto_translate_mode = 1
layout_mode = 2
text = "THEN:"

[node name="ResolutionMargin" type="MarginContainer" parent="VBoxContainer/ContentsMargin/Contents"]
layout_mode = 2
theme_override_constants/margin_left = 10
theme_override_constants/margin_right = 40

[node name="HBoxContainer" type="HBoxContainer" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin"]
layout_mode = 2

[node name="ResolutionPath" type="LineEdit" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer"]
layout_mode = 2
size_flags_horizontal = 3
placeholder_text = "*.gd"
expand_to_text_length = true
script = ExtResource("5_c54nv")

[node name="BrowseButton" type="Button" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer"]
layout_mode = 2
icon = ExtResource("6_q10ke")
script = ExtResource("7_5w8ul")

[node name="FileDialog" type="FileDialog" parent="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton"]
title = "Open a File"
initial_position = 2
size = Vector2i(748, 374)
ok_button_text = "Open"
file_mode = 0
filters = PackedStringArray("*.gd")

[connection signal="toggled" from="VBoxContainer/Header/FoldRuleButton" to="." method="_on_fold_rule_button_toggled"]
[connection signal="pressed" from="VBoxContainer/Header/DeleteRule" to="." method="_on_delete_rule_pressed"]
[connection signal="pressed" from="VBoxContainer/ContentsMargin/Contents/MonitorablesMargin/Monitorables/AddMonitorableSection/HBoxContainer/AddMonitorable" to="." method="_on_add_monitorable_pressed"]
[connection signal="text_submitted" from="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/ResolutionPath" to="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/ResolutionPath" method="_on_text_submitted"]
[connection signal="pressed" from="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton" to="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton" method="_on_pressed"]
[connection signal="file_selected" from="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/BrowseButton/FileDialog" to="VBoxContainer/ContentsMargin/Contents/ResolutionMargin/HBoxContainer/ResolutionPath" method="_on_file_dialog_file_selected"]
